# mcp-server

./: .cascade-mcp-config.json  .dockerignore  .env.example  .gitignore  .gitignore-rust  .gitignore.rust  .gitignore_rust  .gitleaksignore  .mcpbignore  .windsurfrc.json  AGENTS.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  DEPENDENCY_MAPPING.md  DEPENDENCY_MIGRATION_MAPPING.md  Dockerfile  Dockerfile.dev  Dockerfile.rust  FME_FEATURE_FLAG_TOOLS_IMPLEMENTATION_PLAN.md  GO_ARCHITECTURE_ANALYSIS.md  LICENSE  MIGRATION_ANALYSIS.md  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  MIGRATION_PROGRESS.md  MIGRATION_REPORT.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  Makefile  Makefile.rust  README-RUST.md  README-rust.md  README.md  README.rust.md  README_RUST.md  RUST_MIGRATION.md  (+45 more)
.github/: PULL_REQUEST_TEMPLATE.md
.harness/: BUILD_DEPLOY.md  CODEOWNERS  harness-mcp-v2-build-deploy.yaml  harness-mcp-v2-ci.yaml  pull_request_template.md
.serena/: project.yml
chart/: Chart.yaml  values-local.yaml  values.yaml
client/: accesscontrol.go  acm.go  appsec.go  audit.go  audit1.go  auth.go  branch.go  branch_operations.go  ccmanomalies.go  ccmbudgets.go  ccmcommitments.go  ccmcosts.go  ccmgovernance.go  ccmgraphqlperspectives.go  ccmperspectives.go  ccmrecommendations.go  chaos.go  chatbot.go  client.go  client_test.go  cloudcostmanagement.go  connectors.go  context.go  custom_branch_ops.go  dashboard.go  dashboard_service.go  delegate_token.go  environments.go  fme.go  genai.go  gitops.go  iacm.go  idp.go  infrastructure.go  intelligence.go  license.go  license_test.go  (+13 more)
crates/harness-auth/: Cargo.toml
crates/harness-auth/src/: api_key.rs  jwt.rs  lib.rs  manager.rs  session.rs
crates/harness-client/: Cargo.toml
crates/harness-client/src/: client.rs  connector.rs  lib.rs  pipeline.rs
crates/harness-config/: Cargo.toml
crates/harness-config/src/: lib.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: error.rs  events.rs  lib.rs  mcp.rs  server.rs  toolsets.rs
crates/harness-mcp-auth/: Cargo.toml
crates/harness-mcp-auth/src/: api_key.rs  error.rs  jwt.rs  lib.rs  middleware.rs  provider.rs  providers.rs  session.rs
crates/harness-mcp-auth/tests/: auth_tests.rs
crates/harness-mcp-client/: Cargo.toml
crates/harness-mcp-client/src/: client.rs  connector.rs  dashboard.rs  dto.rs  error.rs  lib.rs  pipeline.rs  services.rs
crates/harness-mcp-client/src/dto/: common.rs  pipelines.rs  services.rs
crates/harness-mcp-client/src/services/: connector.rs  connectors.rs  environment.rs  mod.rs  pipeline.rs  pipelines.rs  services.rs
crates/harness-mcp-client/tests/: client_tests.rs
crates/harness-mcp-config/: Cargo.toml
crates/harness-mcp-config/src/: config.rs  env.rs  error.rs  lib.rs
crates/harness-mcp-config/tests/: config_tests.rs
crates/harness-mcp-core/: Cargo.toml
crates/harness-mcp-core/src/: config.rs  error.rs  lib.rs  logging.rs  mcp.rs  middleware.rs  server.rs  transport.rs  types.rs
crates/harness-mcp-modules/: Cargo.toml
crates/harness-mcp-modules/src/: lib.rs
crates/harness-mcp-server/: Cargo.toml
crates/harness-mcp-server/src/: cli.rs  main.rs  middleware.rs  server.rs
crates/harness-mcp-server/src/server/: http.rs  internal.rs  mod.rs  stdio.rs
crates/harness-mcp-server/tests/: integration_tests.rs
crates/harness-mcp-tools/: Cargo.toml
crates/harness-mcp-tools/src/: audit.rs  ccm.rs  chaos.rs  connector.rs  connectors.rs  dashboards.rs  environments.rs  error.rs  fme.rs  handler_factory.rs  idp.rs  infrastructure.rs  lib.rs  logs.rs  mcp.rs  pipeline.rs  pipelines.rs  pullrequests.rs  registries.rs  registry.rs  repositories.rs  scs.rs  service_factory.rs  services.rs  sto.rs  templates.rs  tools.rs  toolset.rs  toolsets.rs
crates/harness-mcp-tools/src/tools/: connectors.rs  environments.rs  pipelines.rs
crates/harness-mcp-tools/tests/: tool_tests.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: connectors.rs  lib.rs  manager.rs  params.rs  pipelines.rs  toolset.rs
harness-mcp-client/: Cargo.toml
harness-mcp-client/src/: auth.rs  client.rs  dto.rs  error.rs  lib.rs  types.rs
harness-mcp-client/src/services/: connectors.rs  mod.rs  pipelines.rs
harness-mcp-client/tests/: client_tests.rs  dto_snapshots.rs
harness-mcp-core/: Cargo.toml
harness-mcp-core/src/: config.rs  error.rs  lib.rs  logging.rs  mcp.rs  protocol.rs  server.rs  tools.rs  transport.rs  types.rs
harness-mcp-core/tests/: integration_tests.rs  snapshots.rs
harness-mcp-proto/: Cargo.toml
harness-mcp-proto/src/: error.rs  lib.rs  server.rs  transport.rs  types.rs
harness-mcp-server/: Cargo.toml
harness-mcp-server/src/: error.rs  lib.rs  main.rs
harness-mcp-server/src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  provider.rs  session.rs  types.rs
harness-mcp-server/src/client/: harness_client.rs  http_client.rs  mod.rs  retry.rs
harness-mcp-server/src/config/: cli.rs  environment.rs  mod.rs
harness-mcp-server/src/dto/: ccm.rs  connector.rs  error.rs  idp.rs  mod.rs  pagination.rs  pipeline.rs  pullrequest.rs  scope.rs
harness-mcp-server/src/error/: mod.rs
harness-mcp-server/src/harness/: mod.rs  server.rs  tools.rs
harness-mcp-server/src/middleware/: cors.rs  logging.rs  mod.rs  tool_filtering.rs
harness-mcp-server/src/modules/: mod.rs  module.rs  registry.rs  types.rs
harness-mcp-server/src/server/: http.rs  http_server.rs  mcp_handler.rs  mcp_server.rs  mod.rs  stdio.rs  stdio_server.rs
harness-mcp-server/src/tools/: connector.rs  mod.rs  params.rs  pipeline.rs  pullrequest.rs  types.rs
harness-mcp-server/src/toolsets/: mod.rs  registry.rs  toolset.rs
harness-mcp-server/src/types/: log_format.rs  mod.rs  transport.rs
harness-mcp-server/src/utils/: mod.rs  time.rs  validation.rs
harness-mcp-server/tests/: cli_tests.rs  integration_tests.rs
harness-mcp-types/: Cargo.toml
harness-mcp-types/src/: harness.rs  lib.rs  mcp.rs  scope.rs  tools.rs
harness-mcp-types/src/harness/: access_control.rs  environment.rs  service.rs
(+1544 files in other folders)
