[package]
name = "harness-mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Harness MCP Server - HTTP client for Harness APIs"

[dependencies]
# Workspace crates
harness-mcp-types.workspace = true

# External dependencies
reqwest.workspace = true
reqwest-retry.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
backoff.workspace = true
chrono.workspace = true

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
tokio-test = "0.4"