[package]
name = "harness-mcp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Harness API client library for MCP Server"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

# Additional dependencies
async-trait = "0.1"
base64 = "0.22"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
insta = { workspace = true }