[package]
name = "harness-mcp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Harness API client library for Rust"

[dependencies]
# HTTP client
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
backoff = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
insta = { workspace = true }