[package]
name = "harness-mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Harness MCP Server"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Local dependencies
harness-mcp-client = { path = "../harness-mcp-client" }

# Additional dependencies for MCP protocol
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
insta = { workspace = true }