[package]
name = "harness-mcp-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) implementation for Rust"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
insta = { workspace = true }