[package]
name = "harness-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Harness MCP Server - Model Context Protocol server for Harness APIs"

[[bin]]
name = "harness-mcp-server"
path = "src/main.rs"

[lib]
name = "harness_mcp_server"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
uuid.workspace = true
time.workspace = true
parking_lot.workspace = true
futures.workspace = true
tokio-util.workspace = true
bytes.workspace = true

# Additional dependencies specific to this crate
url = "2.4"
base64 = "0.21"
jsonwebtoken = "9.2"
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"