[package]
name = "harness-auth"
version = "0.1.0"
edition = "2021"
authors = ["Harness Inc."]
description = "Authentication and authorization for Harness MCP Server"

[dependencies]
harness-config = { path = "../harness-config" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"