[package]
name = "harness-client"
version = "0.1.0"
edition = "2021"
authors = ["Harness Inc."]
description = "HTTP client for Harness APIs"

[dependencies]
harness-config = { path = "../harness-config" }

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2.4"