[package]
name = "harness-config"
version = "0.1.0"
edition = "2021"
authors = ["Harness Inc."]
description = "Configuration management for Harness MCP Server"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
anyhow = "1.0"
thiserror = "1.0"
url = { version = "2.4", features = ["serde"] }