[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"
authors = ["Harness Inc."]
description = "Core functionality for Harness MCP Server"

[dependencies]
harness-config = { path = "../harness-config" }
harness-auth = { path = "../harness-auth" }
harness-tools = { path = "../harness-tools" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }

# MCP protocol (placeholder - will need actual MCP crate)
# mcp = "0.1"  # This would be the actual MCP protocol implementation