[package]
name = "harness-mcp-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication and authorization for Harness MCP Server"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT handling
jsonwebtoken = "9.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"