[package]
name = "harness-mcp-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authentication and authorization for Harness MCP Server"

[dependencies]
harness-mcp-core = { path = "../harness-mcp-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
reqwest.workspace = true
chrono.workspace = true
axum.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
tokio-test = "0.4"