[package]
name = "harness-mcp-client"
version = "0.1.0"
edition = "2021"
description = "HTTP client library for Harness APIs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.0"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Random number generation
rand = "0.8"

# Workspace dependencies
harness-mcp-auth = { path = "../harness-mcp-auth" }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"