[package]
name = "harness-mcp-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for Harness MCP Server"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
url = "2.0"

[dev-dependencies]
tempfile = "3.0"