[package]
name = "harness-mcp-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration management for Harness MCP Server"

[dependencies]
harness-mcp-core = { path = "../harness-mcp-core" }

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
figment.workspace = true
clap.workspace = true
url.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.0"