[package]
name = "harness-mcp-core"
version = "0.1.0"
edition = "2021"
description = "Core MCP server functionality for Harness"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# HTTP server
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# Workspace dependencies
harness-mcp-config = { path = "../harness-mcp-config" }
harness-mcp-tools = { path = "../harness-mcp-tools" }

[dev-dependencies]
tokio-test = "0.4"