[package]
name = "harness-mcp-modules"
version = "0.1.0"
edition = "2021"
description = "Module system for Harness MCP Server"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Workspace dependencies
harness-mcp-tools = { path = "../harness-mcp-tools" }
harness-mcp-config = { path = "../harness-mcp-config" }

[dev-dependencies]
tokio-test = "0.4"