[package]
name = "harness-mcp-tools"
version = "0.1.0"
edition = "2021"
description = "MCP tools implementation for Harness services"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# Workspace dependencies
harness-mcp-client = { path = "../harness-mcp-client" }
harness-mcp-config = { path = "../harness-mcp-config" }

[dev-dependencies]
tokio-test = "0.4"