[package]
name = "harness-mcp-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tool implementations for Harness MCP Server"

[dependencies]
harness-mcp-core = { path = "../harness-mcp-core" }
harness-mcp-client = { path = "../harness-mcp-client" }
harness-mcp-config = { path = "../harness-mcp-config" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"